--- a/lang/ht.json
+++ b/lang/ht.json
@@ -1,89 +1,89 @@
 {
-    "nav_home": "Paj Akèy",
-    "nav_art": "Atizay (Penti/Desen)",
-    "nav_photo": "Fotografi",
-    "nav_sculpting": "Eskilti",
+    "nav_home": "Akèy",
+    "nav_art": "Kreyasyon (Penti & Chabon)",
+    "nav_photo": "Foto",
+    "nav_sculpting": "Volim",
     "nav_projects": "Kòd",
-    "header_title": "Pòtfolyo Atistik Alex",
-    "header_subtitle": "Selebre Bote atravè Penti, Kreyon, ak Lantiy",
-    "marquee": "*** BYENVENI SOU NOUVO SIT PÒTFOLYO MWEN AN! RÈTE YON TI MOMAN POU GADE GALERI YO *** MIZ AJOU: FEB 2026 ***",
-    "sidebar_about_title": "Sou Mwen",
-    "sidebar_about_text": "Bonjou! Mwen se Alex, yon atis ki baze nan vil la. Mwen renmen kaptire sans lavi a nan tout fòm li.",
-    "sidebar_links_title": "Lyen yo",
+    "header_title": "Pòtfolyo Alex",
+    "header_subtitle": "Kòd lajounen, Atizay lannwit. M'ap eseye mete sans nan tou sa.",
+    "marquee": "*** BYENVENI NAN ESPAS MWEN *** PA GEN KLIYAN, PA GEN DAT LIMIT, SÈLMAN KREYASYON *** MIZAJOU : FEV 2026 ***",
+    "sidebar_about_title": "Kiyès sa?",
+    "sidebar_about_text": "Mwen se Alex. DevOps se metye m, atis se nesesite m. M' rete Monreyal. M'ap chèche balans ant lojik sistèm yo ak dezòd kreyasyon an.",
+    "sidebar_links_title": "Konekte",
     "sidebar_github": "GitHub mwen",
     "sidebar_linkedin": "LinkedIn mwen",
     "sidebar_status_title": "Sitiyasyon",
-    "sidebar_status_available": "Disponib pou Komisyon!",
-    "sidebar_construction": "Sit la an konstriksyon!",
+    "sidebar_status_available": "Ouvè pou pwojè enteresan.",
+    "sidebar_construction": "Toujou an chantye (tankou tout rès la).",
     "sidebar_radio_title": "Radyo Alex",
-    "sidebar_radio_playing": "Kounye a ap jwe:",
-    "footer_copy": "© 2026 Alex's Art. Tout dwa rezève.",
-    "footer_browser": "Pi bon pou gade nan Netscape Navigator oswa Internet Explorer 6.0",
-    "footer_visitors": "Vizitè yo:",
-    "footer_last_updated": "Dènye Mizajou:",
-    "gallery_added_on": "Ajoute nan dat:",
-    "index_welcome": "Byenvini nan galeri nimerik mwen an!",
-    "index_intro": "Sit entènèt sa a se yon koleksyon travay mwen pi renmen. Mwen espesyalize nan penti tradisyonèl, desen chabon, ak fotografi iben.",
-    "index_featured": "An Vedèt: \"Morning Dreams\" (Lwil sou twal)",
-    "index_look_around": "Ou mèt gade tout kote! Chak imaj di yon istwa diferan.",
-    "index_highlights_title": "Pwen Pli Enpòtan nan Pwojè yo:",
-    "index_highlight_street": "The Street Life - Yon plonje pwofon nan dezòd iben.",
-    "index_highlight_pastel": "Pastel Series - Eksplore koulè dous ak emosyon.",
-    "index_highlight_charcoal": "Charcoal Portraits - kaptire nanm moun.",
-    "gallery_title": "Galeri Atizay",
-    "gallery_subtitle": "Medyòm Tradisyonèl: Lwil, Akwarèl, ak Chabon",
+    "sidebar_radio_playing": "Kounye a:",
+    "footer_copy": "© 2026 Alex. Fèt alamen Monreyal.",
+    "footer_browser": "Garanti san gwo framework. Pi bon avèk yon kafe.",
+    "footer_visitors": "Vizit:",
+    "footer_last_updated": "Dènye modif:",
+    "gallery_added_on": "Ajoute:",
+    "index_welcome": "Bonjou.",
+    "index_intro": "Mwen pase tout vi m ap bati enfrastrikti envizib. Isit la, se lekontrè. Se vizib, se enpafè, se mwen. Lwil, chabon, ak foto ki pran lè vil la ap dòmi.",
+    "index_featured": "Kounye a: \"Morning Dreams\" (Lwil sou twal)",
+    "index_look_around": "Fè yon ti gade. Pa gen lòd, jis moso nan sa m wè.",
+    "index_highlights_title": "Seleksyon:",
+    "index_highlight_street": "The Street Life - Dezòd lavil, san filtè.",
+    "index_highlight_pastel": "Pastel Series - Lè m bezwen dousè.",
+    "index_highlight_charcoal": "Charcoal Portraits - Chèche nanm nan, pa jis figi a.",
+    "gallery_title": "Atelye a",
+    "gallery_subtitle": "Lwil, Akwarèl, Chabon. Retounen nan baz la.",
     "gallery_painting": "Penti",
     "gallery_drawing": "Desen",
     "photo_title": "Fotografi",
-    "photo_subtitle": "Kaptire Momant nan Tan an",
-    "photo_nature": "Moun ak Vil",
-    "photo_portraits": "Pòtre",
+    "photo_subtitle": "Kanpe tan an pou yon segonn",
+    "photo_nature": "Moun & Beton",
+    "photo_portraits": "Pòtrè",
     "street_title": "The Street Life",
-    "street_subtitle": "Moman san filtè nan Forè Iben an",
-    "street_shadows": "Lonbraj ak Limyè",
-    "gallery_painting_drawing": "Penti ak Desen",
-    "gallery_intro": "Eksplore fwontyè ant reyalite ak imajinasyon atravè teknik tradisyonèl yo.",
-    "gallery_back": "Tounen nan Akèy",
-    "photo_collections": "Koleksyon yo",
-    "photo_intro": "Lantiy mwen konsantre sou enèji lavi nan vil la — figi yo, lari yo, ak istwa ki devlope nan vil la.",
-    "street_candid": "Moman Iben Spontane",
-    "street_intro": "Fotografi lari se jwenn bote nan dezòd la. Se atizay moman desizif la.",
-    "street_marquee": ">>> EKSPLORE LARI YO <<< KAPTIVE SA KI PA WE YO <<< LAVI NAN RI 2026 <<<",
-    "projects_title": "Pwojè IT ak Kodaj",
-    "projects_subtitle": "Travay nimerik ak eksperyans lojisyèl",
-    "projects_intro": "Lè m pa pentire, m bati bagay ak kòd.",
-    "projects_view_code": "Wè kòd",
-    "sidebar_radio_select": "Chwazi tras la:",
-    "sidebar_video_title": "Tib Retro",
-    "sidebar_video_note": "Klike pou Jwe/Pòz",
-    "sculpting_title": "Galeri Eskilti",
-    "sculpting_subtitle": "Travay nan Ajil, Wòch, ak Metal",
-    "sculpting_intro": "Eksplore fòm ak espas atravè medya tactile.",
-    "photo_consolidated_title": "Pòtfolyo Fotografi",
-    "photo_consolidated_subtitle": "Moun ak Vil — Lavi Lari Atravè Lantiy la",
-    "nav_music": "Mizik",
-    "music_title": "🎵 Mizik",
-    "music_subtitle": "Mizik Orijinal ak Konpozisyon",
-    "music_tracks_heading": "🎧 Tras yo",
-    "music_loading": "Ap chaje tras yo...",
-    "music_marquee": ">>> AP JWE KOUNYE A <<< KONPOZISYON ORIJINAL <<< KOUTE & JWI 2026 <<<",
-    "music_no_tracks": "Pa gen tras ankò. Ajoute mizik atravè panno administrasyon an!",
-    "music_load_error": "Pa t kapab chaje tras yo.",
-    "music_audio_unsupported": "Navigatè ou a pa sipòte odyo.",
-    "index_latest_loading": "Ap chaje dènye ajoute a...",
-    "index_latest_label": "⭐ DÈNYE AJOUTE ⭐",
-    "index_latest_added": "Ajoute:",
-    "index_latest_empty": "Pa gen okenn eleman nan galeri a ankò.",
-    "sidebar_radio_loading": "Ap chaje tras yo...",
-    "sidebar_radio_no_tracks": "Pa gen tras disponib",
-    "detail_loading": "Ap chaje...",
-    "detail_not_found": "Eleman pa jwenn.",
-    "detail_medium": "Medyòm:",
-    "detail_genre": "Jan:",
-    "detail_description": "Deskripsyon",
+    "street_subtitle": "Monreyal, kri ak bèl",
+    "street_shadows": "Lonbraj & Limyè",
+    "gallery_painting_drawing": "Penti & Desen",
+    "gallery_intro": "Ekran an frèt. Twal ak papye pa padone w. Se sa m renmen. Fwontyè ant sa m wè ak sa m santi.",
+    "gallery_back": "Retounen",
+    "photo_collections": "Seri",
+    "photo_intro": "M'ap kouri dèyè enèji vil la. Figi fatige, ti riyèl, limyè a katrè dimaten. Istwa k'ap ekri tèt li.",
+    "street_candid": "Moman volè",
+    "street_intro": "Monreyal bèl lè l sal. Foto lari, se fason m dokimante solitid ak limyè nan dezòd la.",
+    "street_marquee": ">>> NAN LARI A <<< ENVIZIB LA VIN VIZIB <<< MONREYAL 2026 <<<",
+    "projects_title": "Kòd & Sistèm",
+    "projects_subtitle": "L'a nan achitekti envizib",
+    "projects_intro": "Achitekti se atizay tou. Lè m depoze penso yo, m tounen nan rasin mwen: tèminal la, kòd la, ak sistèm ki kenbe doubout.",
+    "projects_view_code": "Wè sous la",
+    "sidebar_radio_select": "Mizik fon:",
+    "sidebar_video_title": "TV Retro",
+    "sidebar_video_note": "Klike pou jwe/kanpe",
+    "sculpting_title": "Volim",
+    "sculpting_subtitle": "Ajil, Wòch, Metal",
+    "sculpting_intro": "Sòti nan 2D. Manyen matyè a pou vre.",
+    "photo_consolidated_title": "Pòtfolyo Foto",
+    "photo_consolidated_subtitle": "Je sou vil la",
+    "nav_music": "Son",
+    "music_title": "🎵 Son",
+    "music_subtitle": "Konpozisyon & anbyans mwen",
+    "music_tracks_heading": "🎧 Tracks",
+    "music_loading": "Ap chaje...",
+    "music_marquee": ">>> SOU LÈ A <<< KREYASYON SONORE <<< KOUTE SA 2026 <<<",
+    "music_no_tracks": "Poko gen anyen. Estidyo a vid.",
+    "music_load_error": "Erè chajman.",
+    "music_audio_unsupported": "Navigatè w la refize jwe son.",
+    "index_latest_loading": "N'ap gade sa k nouvo...",
+    "index_latest_label": "⭐ TOUT FRE ⭐",
+    "index_latest_added": "Dat:",
+    "index_latest_empty": "Anyen nouvo.",
+    "sidebar_radio_loading": "Ap chaje...",
+    "sidebar_radio_no_tracks": "Silans radyo.",
+    "detail_loading": "Yon ti moman...",
+    "detail_not_found": "Sa pa egziste.",
+    "detail_medium": "Teknik:",
+    "detail_genre": "Estil:",
+    "detail_description": "Istwa a",
     "detail_listen": "Koute",
-    "detail_back": "Tounen nan galeri a",
+    "detail_back": "Retounen",
     "detail_private": "Prive",
     "detail_public": "Piblik",
-    "detail_error": "Pa t kapab chaje detay yo."
+    "detail_error": "Oups, erè chajman."
 }
