--- a/lang/mx.json
+++ b/lang/mx.json
@@ -1,89 +1,89 @@
 {
     "nav_home": "Inicio",
-    "nav_art": "Arte (Pintura/Dibujo)",
-    "nav_photo": "Fotografía",
-    "nav_sculpting": "Escultura",
+    "nav_art": "Arte (Pintura y Carbón)",
+    "nav_photo": "Foto",
+    "nav_sculpting": "Volumen",
     "nav_projects": "Código",
-    "header_title": "Portafolio Artístico de Alex",
-    "header_subtitle": "Celebrando la Belleza a través de la Pintura, el Lápiz y el Lente",
-    "marquee": "*** ¡BIENVENIDO A MI NUEVO SITIO PORTAFOLIO! QUÉDATE UN RATO Y EXPLORA LAS GALERÍAS *** ACTUALIZADO: FEB 2026 ***",
-    "sidebar_about_title": "Sobre Mí",
-    "sidebar_about_text": "¡Hola! Soy Alex, un artist basado en la ciudad. Me encanta capturar la esencia de la vida en todas sus formas.",
-    "sidebar_links_title": "Enlaces",
+    "header_title": "Portafolio de Alex",
+    "header_subtitle": "Código de día, Arte de noche. Tratando de darle sentido a todo.",
+    "marquee": "*** BIENVENIDO A MI ESPACIO *** SIN CLIENTES, SIN FECHAS LÍMITE, SOLO CREACIÓN *** ACTUALIZADO: FEB 2026 ***",
+    "sidebar_about_title": "¿Quién?",
+    "sidebar_about_text": "Soy Alex. DevOps de profesión, artista por necesidad. Vivo en Montreal. Busco el equilibrio entre la lógica de los sistemas y el caos de la creación.",
+    "sidebar_links_title": "Conectar",
     "sidebar_github": "Mi GitHub",
     "sidebar_linkedin": "Mi LinkedIn",
     "sidebar_status_title": "Estado",
-    "sidebar_status_available": "¡Disponible para encargos!",
-    "sidebar_construction": "¡Sitio en construcción!",
-    "sidebar_radio_title": "La Radio de Alex",
-    "sidebar_radio_playing": "Reproduciendo:",
-    "footer_copy": "© 2026 Alex's Art. Todos los derechos reservados.",
-    "footer_browser": "Mejor visto en Netscape Navigator o Internet Explorer 6.0",
-    "footer_visitors": "Visitantes:",
-    "footer_last_updated": "Última actualización:",
-    "gallery_added_on": "Agregado el:",
-    "index_welcome": "¡Bienvenido a mi galería digital!",
-    "index_intro": "Este sitio web es una colección de mis obras favoritas. Me especializo en pintura tradicional, dibujo al carbón y fotografía urbana.",
-    "index_featured": "Destacado: \"Morning Dreams\" (Óleo sobre lienzo)",
-    "index_look_around": "¡Siéntete libre de mirar alrededor! Cada imagen cuenta una historia diferente.",
-    "index_highlights_title": "Lo mejor del proyecto:",
-    "index_highlight_street": "The Street Life - Una inmersión profunda en el caos urbano.",
-    "index_highlight_pastel": "Pastel Series - Explorando colores suaves y emociones.",
-    "index_highlight_charcoal": "Charcoal Portraits - capturando el alma humana.",
-    "gallery_title": "Galería de Arte",
-    "gallery_subtitle": "Medios Tradicionales: Óleo, Acuarela y Carbón",
+    "sidebar_status_available": "Abierto a proyectos interesantes.",
+    "sidebar_construction": "Siempre en obra (como todo lo demás).",
+    "sidebar_radio_title": "Radio Alex",
+    "sidebar_radio_playing": "Ahora suena:",
+    "footer_copy": "© 2026 Alex. Hecho a mano en Montreal.",
+    "footer_browser": "Garantizado sin frameworks pesados. Mejor con un café.",
+    "footer_visitors": "Visitas:",
+    "footer_last_updated": "Última act.:",
+    "gallery_added_on": "Agregado:",
+    "index_welcome": "Hola.",
+    "index_intro": "Pasé mi vida construyendo infraestructuras invisibles. Aquí es lo contrario. Es visible, es imperfecto, soy yo. Óleo, carbón y fotos tomadas cuando la ciudad duerme.",
+    "index_featured": "Ahora mismo: \"Morning Dreams\" (Óleo sobre lienzo)",
+    "index_look_around": "Echa un vistazo. No hay orden, solo fragmentos de lo que veo.",
+    "index_highlights_title": "Selección:",
+    "index_highlight_street": "The Street Life - Caos urbano, sin filtro.",
+    "index_highlight_pastel": "Pastel Series - Cuando necesito suavidad.",
+    "index_highlight_charcoal": "Charcoal Portraits - Buscando el alma, no solo la cara.",
+    "gallery_title": "El Taller",
+    "gallery_subtitle": "Óleo, Acuarela, Carbón. Volver a lo básico.",
     "gallery_painting": "Pintura",
     "gallery_drawing": "Dibujo",
     "photo_title": "Fotografía",
-    "photo_subtitle": "Capturando Momentos en el Tiempo",
-    "photo_nature": "Gente y Ciudades",
+    "photo_subtitle": "Detener el tiempo un segundo",
+    "photo_nature": "Humanos y Concreto",
     "photo_portraits": "Retratos",
     "street_title": "The Street Life",
-    "street_subtitle": "Momentos sin filtrar de la jungla urbana",
-    "street_shadows": "Sombra y Luz",
+    "street_subtitle": "Montreal, cruda y hermosa",
+    "street_shadows": "Sombras y Luces",
     "gallery_painting_drawing": "Pintura y Dibujo",
-    "gallery_intro": "Explorando la frontera entre la realidad y la imaginación a través de técnicas tradicionales.",
-    "gallery_back": "Volver al inicio",
-    "photo_collections": "Colecciones",
-    "photo_intro": "Mi lente se enfoca en la energía de la vida urbana — los rostros, las calles y las historias que se desarrollan en la ciudad.",
-    "street_candid": "Momentos urbanos espontáneos",
-    "street_intro": "La fotografía de calle trata de encontrar la belleza en el caos. Es el arte del momento decisivo.",
-    "street_marquee": ">>> EXPLORANDO LAS CALLES <<< CAPTURANDO LO INVISIBLE <<< VIDA URBANA 2026 <<<",
-    "projects_title": "Proyectos de TI",
-    "projects_subtitle": "Obras digitales y experimentos de software",
-    "projects_intro": "Cuando no estoy pintando, estoy construyendo cosas con código.",
+    "gallery_intro": "La pantalla es fría. El lienzo y el papel no perdonan. Eso me gusta. La frontera entre lo que veo y lo que siento.",
+    "gallery_back": "Volver",
+    "photo_collections": "Series",
+    "photo_intro": "Persigo la energía de la ciudad. Caras cansadas, callejones, la luz a las 4 AM. La historia que se escribe sola.",
+    "street_candid": "Instantes robados",
+    "street_intro": "Montreal es hermosa cuando está sucia. La foto de calle es mi forma de documentar la soledad y la luz en el desorden.",
+    "street_marquee": ">>> EN LAS CALLES <<< LO INVISIBLE SE HACE VISIBLE <<< MONTREAL 2026 <<<",
+    "projects_title": "Código y Sistemas",
+    "projects_subtitle": "El arte de la arquitectura invisible",
+    "projects_intro": "La arquitectura también es arte. Cuando suelto los pinceles, vuelvo a mis raíces: la terminal, el código y los sistemas que se mantienen en pie.",
     "projects_view_code": "Ver código",
-    "sidebar_radio_select": "Seleccionar pista:",
-    "sidebar_video_title": "Tubo Retro",
-    "sidebar_video_note": "Clic para Play/Pausa",
-    "sculpting_title": "Galería de Escultura",
-    "sculpting_subtitle": "Obras en Arcilla, Piedra y Metal",
-    "sculpting_intro": "Explorando la forma y el espacio a través de medios táctiles.",
-    "photo_consolidated_title": "Portafolio de Fotografía",
-    "photo_consolidated_subtitle": "Gente y Ciudades — La vida callejera a través del lente",
-    "nav_music": "Música",
-    "music_title": "🎵 Música",
-    "music_subtitle": "Pistas y Composiciones Originales",
+    "sidebar_radio_select": "Banda sonora:",
+    "sidebar_video_title": "TV Retro",
+    "sidebar_video_note": "Click para play/pausa",
+    "sculpting_title": "Volumen",
+    "sculpting_subtitle": "Arcilla, Piedra, Metal",
+    "sculpting_intro": "Escapar del 2D. Tocar la materia de verdad.",
+    "photo_consolidated_title": "Portafolio Foto",
+    "photo_consolidated_subtitle": "Ojo en la ciudad",
+    "nav_music": "Sonido",
+    "music_title": "🎵 Sonido",
+    "music_subtitle": "Mis composiciones y vibras",
     "music_tracks_heading": "🎧 Pistas",
-    "music_loading": "Cargando pistas...",
-    "music_marquee": ">>> REPRODUCIENDO <<< COMPOSICIONES ORIGINALES <<< ESCUCHAR & DISFRUTAR 2026 <<<",
-    "music_no_tracks": "¡No hay pistas aún. Agrega música desde el panel de administración!",
-    "music_load_error": "No se pudieron cargar las pistas.",
-    "music_audio_unsupported": "Tu navegador no soporta audio.",
-    "index_latest_loading": "Cargando última adición...",
-    "index_latest_label": "⭐ ÚLTIMA ADICIÓN ⭐",
-    "index_latest_added": "Agregado:",
-    "index_latest_empty": "No hay elementos en la galería todavía.",
-    "sidebar_radio_loading": "Cargando pistas...",
-    "sidebar_radio_no_tracks": "No hay pistas disponibles",
-    "detail_loading": "Cargando...",
-    "detail_not_found": "Elemento no encontrado.",
-    "detail_medium": "Medio:",
-    "detail_genre": "Género:",
-    "detail_description": "Descripción",
+    "music_loading": "Cargando...",
+    "music_marquee": ">>> AL AIRE <<< CREACIÓN SONORA <<< ESCUCHA ESTO 2026 <<<",
+    "music_no_tracks": "Nada aún. El estudio está vacío.",
+    "music_load_error": "Error de carga.",
+    "music_audio_unsupported": "Tu navegador se niega a reproducir sonido.",
+    "index_latest_loading": "Checando qué hay de nuevo...",
+    "index_latest_label": "⭐ FRESCO ⭐",
+    "index_latest_added": "Fecha:",
+    "index_latest_empty": "Nada nuevo.",
+    "sidebar_radio_loading": "Cargando...",
+    "sidebar_radio_no_tracks": "Silencio de radio.",
+    "detail_loading": "Un momento...",
+    "detail_not_found": "No existe.",
+    "detail_medium": "Técnica:",
+    "detail_genre": "Estilo:",
+    "detail_description": "La Historia",
     "detail_listen": "Escuchar",
-    "detail_back": "Volver a la galería",
+    "detail_back": "Volver",
     "detail_private": "Privado",
     "detail_public": "Público",
-    "detail_error": "No se pudieron cargar los detalles."
+    "detail_error": "Ups, error de carga."
 }
