--- a/lang/en.json
+++ b/lang/en.json
@@ -1,89 +1,89 @@
 {
     "nav_home": "Home",
-    "nav_art": "Art (Paint/Draw)",
-    "nav_photo": "Photography",
-    "nav_sculpting": "Sculpting",
+    "nav_art": "Art (Paint & Charcoal)",
+    "nav_photo": "Photo",
+    "nav_sculpting": "Volume",
     "nav_projects": "Code",
-    "header_title": "Alex's Artistic Portfolio",
-    "header_subtitle": "Celebrating Beauty through Paint, Pencil, and Lens",
-    "marquee": "*** WELCOME TO MY NEW PORTFOLIO SITE! STAY AWHILE AND BROWSE THE GALLERIES *** UPDATED: FEB 2026 ***",
-    "sidebar_about_title": "About Me",
-    "sidebar_about_text": "Hello! I am Alex, an artist based in the city. I love capturing the essence of life in all its forms.",
-    "sidebar_links_title": "Links",
+    "header_title": "Alex's Portfolio",
+    "header_subtitle": "Code by day, Art by night. Trying to make sense of it all.",
+    "marquee": "*** WELCOME TO MY SPACE *** NO CLIENTS, NO DEADLINES, JUST CREATION *** UPDATED: FEB 2026 ***",
+    "sidebar_about_title": "Who?",
+    "sidebar_about_text": "I'm Alex. DevOps by trade, artist by necessity. Based in Montreal. I look for the balance between system logic and creative chaos.",
+    "sidebar_links_title": "Connect",
     "sidebar_github": "My GitHub",
     "sidebar_linkedin": "My LinkedIn",
     "sidebar_status_title": "Status",
-    "sidebar_status_available": "Available for Commissions!",
-    "sidebar_construction": "Site under construction!",
-    "sidebar_radio_title": "Alex's Radio",
+    "sidebar_status_available": "Open to interesting projects.",
+    "sidebar_construction": "Still a work in progress (like everything else).",
+    "sidebar_radio_title": "Radio Alex",
     "sidebar_radio_playing": "Now Playing:",
-    "footer_copy": "© 2026 Alex's Art. All rights reserved.",
-    "footer_browser": "Best viewed in Netscape Navigator or Internet Explorer 6.0",
-    "footer_visitors": "Visitors:",
-    "footer_last_updated": "Last Updated:",
-    "gallery_added_on": "Added on:",
-    "index_welcome": "Welcome to my digital gallery!",
-    "index_intro": "This website is a collection of my favorite works. I specialize in traditional painting, charcoal drawing, and urban photography.",
-    "index_featured": "Featured: \"Morning Dreams\" (Oil on Canvas)",
-    "index_look_around": "Feel free to look around! Every image tells a different story.",
-    "index_highlights_title": "Project Highlights:",
-    "index_highlight_street": "The Street Life - A deep dive into urban chaos.",
-    "index_highlight_pastel": "Pastel Series - Exploring soft colors and emotions.",
-    "index_highlight_charcoal": "Charcoal Portraits - capturing the human soul.",
-    "gallery_title": "Art Gallery",
-    "gallery_subtitle": "Traditional Mediums: Oil, Watercolor, and Charcoal",
+    "footer_copy": "© 2026 Alex. Hand-made in Montreal.",
+    "footer_browser": "Guaranteed heavy-framework free. Best viewed with coffee.",
+    "footer_visitors": "Visits:",
+    "footer_last_updated": "Last update:",
+    "gallery_added_on": "Added:",
+    "index_welcome": "Hi.",
+    "index_intro": "I've spent my life building invisible infrastructures. Here, it's the opposite. It's visible, it's imperfect, it's me. Oil, charcoal, and photos taken while the city sleeps.",
+    "index_featured": "Right now: \"Morning Dreams\" (Oil on Canvas)",
+    "index_look_around": "Look around. No specific order, just fragments of what I see.",
+    "index_highlights_title": "Selection:",
+    "index_highlight_street": "The Street Life - Urban chaos, unfiltered.",
+    "index_highlight_pastel": "Pastel Series - When I need softness.",
+    "index_highlight_charcoal": "Charcoal Portraits - Seeking the soul, not just the face.",
+    "gallery_title": "The Workshop",
+    "gallery_subtitle": "Oil, Watercolor, Charcoal. Back to basics.",
     "gallery_painting": "Painting",
     "gallery_drawing": "Drawing",
     "photo_title": "Photography",
-    "photo_subtitle": "Capturing Moments in Time",
-    "photo_nature": "People & Cities",
+    "photo_subtitle": "Stopping time for a second",
+    "photo_nature": "Humans & Concrete",
     "photo_portraits": "Portraits",
     "street_title": "The Street Life",
-    "street_subtitle": "Unfiltered Moments from the Urban Jungle",
-    "street_shadows": "Shadows & Light",
-    "gallery_painting_drawing": "Painting & Drawing",
-    "gallery_intro": "Exploring the boundary between reality and imagination through traditional techniques.",
-    "gallery_back": "Back to Home",
-    "photo_collections": "Collections",
-    "photo_intro": "My lens focuses on the energy of urban life — the faces, the streets, and the stories that unfold in the city.",
-    "street_candid": "Candid Urban Moments",
-    "street_intro": "Street photography is about finding beauty in the chaos. It's the art of the decisive moment.",
-    "street_marquee": ">>> EXPLORING THE STREETS <<< CAPTURING THE UNSEEN <<< STREET LIFE 2026 <<<",
-    "projects_title": "IT & Coding Projects",
-    "projects_subtitle": "Digital works and software experiments",
-    "projects_intro": "When I'm not painting, I'm building things with code.",
+    "street_subtitle": "Montreal, raw and beautiful",
+    "street_shadows": "Shadows & Lights",
+    "gallery_painting_drawing": "Paint & Draw",
+    "gallery_intro": "Screens are cold. Canvas and paper don't forgive. That's what I like. The boundary between what I see and what I feel.",
+    "gallery_back": "Back",
+    "photo_collections": "Series",
+    "photo_intro": "I chase the city's energy. Tired faces, alleyways, the light at 4 AM. The story that writes itself.",
+    "street_candid": "Stolen Moments",
+    "street_intro": "Montreal is beautiful when it's dirty. Street photography is my way of documenting solitude and light in the ambient mess.",
+    "street_marquee": ">>> IN THE STREETS <<< THE INVISIBLE BECOMES VISIBLE <<< MONTREAL 2026 <<<",
+    "projects_title": "Code & Systems",
+    "projects_subtitle": "The art of invisible architecture",
+    "projects_intro": "Architecture is art too. When I put down the brushes, I go back to my roots: the terminal, the code, and systems that actually stand up.",
     "projects_view_code": "View Source",
-    "sidebar_radio_select": "Select Track:",
-    "sidebar_video_title": "Retro Tube",
-    "sidebar_video_note": "Click to Play/Pause",
-    "sculpting_title": "Sculpting Gallery",
-    "sculpting_subtitle": "3D Works in Clay, Stone, and Metal",
-    "sculpting_intro": "Exploring form and space through tactile mediums.",
-    "photo_consolidated_title": "Photography Portfolio",
-    "photo_consolidated_subtitle": "People & Cities — Street Life Through the Lens",
-    "nav_music": "Music",
-    "music_title": "🎵 Music",
-    "music_subtitle": "Original Tracks & Compositions",
+    "sidebar_radio_select": "Soundtrack:",
+    "sidebar_video_title": "Retro TV",
+    "sidebar_video_note": "Click to play/pause",
+    "sculpting_title": "Volume",
+    "sculpting_subtitle": "Clay, Stone, Metal",
+    "sculpting_intro": "Escaping 2D. Touching matter for real.",
+    "photo_consolidated_title": "Photo Portfolio",
+    "photo_consolidated_subtitle": "Eye on the city",
+    "nav_music": "Sound",
+    "music_title": "🎵 Sound",
+    "music_subtitle": "My compositions & vibes",
     "music_tracks_heading": "🎧 Tracks",
-    "music_loading": "Loading tracks...",
-    "music_marquee": ">>> NOW PLAYING <<< ORIGINAL COMPOSITIONS <<< LISTEN & ENJOY 2026 <<<",
-    "music_no_tracks": "No tracks uploaded yet. Add music through the admin dashboard!",
-    "music_load_error": "Could not load tracks.",
-    "music_audio_unsupported": "Your browser does not support audio.",
-    "index_latest_loading": "Loading latest addition...",
-    "index_latest_label": "⭐ LATEST ADDITION ⭐",
-    "index_latest_added": "Added:",
-    "index_latest_empty": "No items in the gallery yet.",
-    "sidebar_radio_loading": "Loading tracks...",
-    "sidebar_radio_no_tracks": "No tracks available",
-    "detail_loading": "Loading...",
-    "detail_not_found": "Item not found.",
-    "detail_medium": "Medium:",
-    "detail_genre": "Genre:",
-    "detail_description": "Description",
+    "music_loading": "Loading...",
+    "music_marquee": ">>> ON AIR <<< SOUND CREATION <<< LISTEN TO THIS 2026 <<<",
+    "music_no_tracks": "Nothing yet. Studio is empty.",
+    "music_load_error": "Load error.",
+    "music_audio_unsupported": "Your browser refuses to play sound.",
+    "index_latest_loading": "Checking what's new...",
+    "index_latest_label": "⭐ FRESH ⭐",
+    "index_latest_added": "Date:",
+    "index_latest_empty": "Nothing new.",
+    "sidebar_radio_loading": "Loading...",
+    "sidebar_radio_no_tracks": "Radio silence.",
+    "detail_loading": "One moment...",
+    "detail_not_found": "Doesn't exist.",
+    "detail_medium": "Technique:",
+    "detail_genre": "Style:",
+    "detail_description": "The Story",
     "detail_listen": "Listen",
-    "detail_back": "Back to Gallery",
+    "detail_back": "Back",
     "detail_private": "Private",
     "detail_public": "Public",
-    "detail_error": "Could not load item details."
+    "detail_error": "Oops, load error."
 }
