--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,89 +1,89 @@
 {
     "nav_home": "Accueil",
-    "nav_art": "Art (Peinture/Dessin)",
-    "nav_photo": "Photographie",
-    "nav_sculpting": "Sculpture",
+    "nav_art": "Art (Peinture & Fusain)",
+    "nav_photo": "Photo",
+    "nav_sculpting": "Volume",
     "nav_projects": "Code",
-    "header_title": "Le Portfolio Artistique d'Alex",
-    "header_subtitle": "Célébrer la Beauté par la Peinture, le Crayon et l'Objectif",
-    "marquee": "*** BIENVENUE SUR MON NOUVEAU SITE PORTFOLIO ! PRENEZ VOTRE TEMPS POUR PARCOURIR LES GALERIES *** MIS À JOUR : FÉV 2026 ***",
-    "sidebar_about_title": "À Propos",
-    "sidebar_about_text": "Bonjour ! Je suis Alex, un artiste basé en ville. J'aime capturer l'essence de la vie sous toutes ses formes.",
-    "sidebar_links_title": "Liens",
+    "header_title": "Le Portfolio d'Alex",
+    "header_subtitle": "Code le jour, Art la nuit. Essayer de faire du sens avec tout ça.",
+    "marquee": "*** BIENVENUE DANS MON ESPACE *** PAS DE CLIENTS, PAS DE DEADLINES, JUSTE DE LA CRÉATION *** MIS À JOUR : FÉV 2026 ***",
+    "sidebar_about_title": "C'est qui ?",
+    "sidebar_about_text": "Moi c'est Alex. DevOps de carrière, artiste par nécessité. J'habite Montréal. Je cherche l'équilibre entre la logique des systèmes et le chaos de la création.",
+    "sidebar_links_title": "Mes réseaux",
     "sidebar_github": "Mon GitHub",
     "sidebar_linkedin": "Mon LinkedIn",
     "sidebar_status_title": "Statut",
-    "sidebar_status_available": "Disponible pour des commandes !",
-    "sidebar_construction": "Site en construction !",
-    "sidebar_radio_title": "La Radio d'Alex",
-    "sidebar_radio_playing": "En lecture :",
-    "footer_copy": "© 2026 Alex's Art. Tous droits réservés.",
-    "footer_browser": "Optimisé pour Netscape Navigator ou Internet Explorer 6.0",
-    "footer_visitors": "Visiteurs :",
-    "footer_last_updated": "Dernière mise à jour :",
+    "sidebar_status_available": "Ouvert aux projets intéressants.",
+    "sidebar_construction": "Toujours en chantier (comme le reste).",
+    "sidebar_radio_title": "Radio Alex",
+    "sidebar_radio_playing": "En ce moment :",
+    "footer_copy": "© 2026 Alex. Fait à la main à Montréal.",
+    "footer_browser": "Garanti sans frameworks lourds. Marche mieux avec un café.",
+    "footer_visitors": "Passages :",
+    "footer_last_updated": "Dernière update :",
     "gallery_added_on": "Ajouté le :",
-    "index_welcome": "Bienvenue dans ma galerie numérique !",
-    "index_intro": "Ce site est une collection de mes œuvres favorites. Je me spécialise dans la peinture traditionnelle, le dessin au fusain et la photographie urbaine.",
-    "index_featured": "En vedette : \"Morning Dreams\" (Huile sur toile)",
-    "index_look_around": "N'hésitez pas à regarder partout ! Chaque image raconte une histoire différente.",
-    "index_highlights_title": "Points forts du projet :",
-    "index_highlight_street": "The Street Life - Une plongée profonde dans le chaos urbain.",
-    "index_highlight_pastel": "Pastel Series - Explorer les couleurs douces et les émotions.",
-    "index_highlight_charcoal": "Charcoal Portraits - capturer l'âme humaine.",
-    "gallery_title": "Galerie d'Art",
-    "gallery_subtitle": "Médiums traditionnels : Huile, Aquarelle et Fusain",
+    "index_welcome": "Salut.",
+    "index_intro": "J'ai passé ma vie à construire des infrastructures invisibles. Ici, c'est l'inverse. C'est visible, c'est imparfait, c'est moi. De l'huile, du fusain, et des photos prises quand la ville dort.",
+    "index_featured": "En ce moment : \"Morning Dreams\" (Huile sur toile)",
+    "index_look_around": "Fais le tour. Y'a pas d'ordre précis, juste des fragments de ce que je vois.",
+    "index_highlights_title": "Sélection :",
+    "index_highlight_street": "The Street Life - Le chaos urbain, sans filtre.",
+    "index_highlight_pastel": "Série Pastel - Quand j'ai besoin de douceur.",
+    "index_highlight_charcoal": "Portraits au Fusain - Chercher l'âme, pas juste la face.",
+    "gallery_title": "Atelier",
+    "gallery_subtitle": "Huile, Aquarelle et Fusain. Retourner aux sources.",
     "gallery_painting": "Peinture",
     "gallery_drawing": "Dessin",
     "photo_title": "Photographie",
-    "photo_subtitle": "Capturer des moments dans le temps",
-    "photo_nature": "Gens & Villes",
+    "photo_subtitle": "Arrêter le temps une seconde",
+    "photo_nature": "Humains & Béton",
     "photo_portraits": "Portraits",
     "street_title": "The Street Life",
-    "street_subtitle": "Moments bruts de la jungle urbaine",
-    "street_shadows": "Ombre & Lumière",
+    "street_subtitle": "Montréal, brute et belle",
+    "street_shadows": "Ombres & Lumières",
     "gallery_painting_drawing": "Peinture & Dessin",
-    "gallery_intro": "Explorer la frontière entre réalité et imagination à travers des techniques traditionnelles.",
-    "gallery_back": "Retour à l'accueil",
-    "photo_collections": "Collections",
-    "photo_intro": "Mon objectif se concentre sur l'énergie de la vie urbaine — les visages, les rues et les histoires qui se déroulent dans la ville.",
-    "street_candid": "Moments urbains spontanés",
-    "street_intro": "La photographie de rue consiste à trouver la beauté dans le chaos. C'est l'art du moment décisif.",
-    "street_marquee": ">>> EXPLORATION DES RUES <<< CAPTURER L'INVISIBLE <<< STREET LIFE 2026 <<<",
-    "projects_title": "Projets Informatiques",
-    "projects_subtitle": "Créations numériques et expériences logicielles",
-    "projects_intro": "Quand je ne peins pas, je construis des choses avec du code.",
-    "projects_view_code": "Voir le code",
-    "sidebar_radio_select": "Choisir la piste :",
-    "sidebar_video_title": "Tube Rétro",
-    "sidebar_video_note": "Clic pour Lecture/Pause",
-    "sculpting_title": "Galerie de Sculpture",
-    "sculpting_subtitle": "Œuvres en Argile, Pierre et Métal",
-    "sculpting_intro": "Explorer la forme et l'espace à travers des médiums tactiles.",
-    "photo_consolidated_title": "Portefeuille de Photographie",
-    "photo_consolidated_subtitle": "Gens & Villes — La vie de rue à travers l'objectif",
-    "nav_music": "Musique",
-    "music_title": "🎵 Musique",
-    "music_subtitle": "Morceaux et Compositions Originaux",
-    "music_tracks_heading": "🎧 Morceaux",
-    "music_loading": "Chargement des morceaux...",
-    "music_marquee": ">>> EN LECTURE <<< COMPOSITIONS ORIGINALES <<< ÉCOUTER & PROFITER 2026 <<<",
-    "music_no_tracks": "Aucun morceau ajouté. Ajoutez de la musique via le panneau d'administration !",
-    "music_load_error": "Impossible de charger les morceaux.",
-    "music_audio_unsupported": "Votre navigateur ne supporte pas l'audio.",
-    "index_latest_loading": "Chargement du dernier ajout...",
-    "index_latest_label": "⭐ DERNIER AJOUT ⭐",
-    "index_latest_added": "Ajouté le :",
-    "index_latest_empty": "Aucun élément dans la galerie pour le moment.",
-    "sidebar_radio_loading": "Chargement des pistes...",
-    "sidebar_radio_no_tracks": "Aucune piste disponible",
-    "detail_loading": "Chargement...",
-    "detail_not_found": "Élément introuvable.",
-    "detail_medium": "Médium :",
-    "detail_genre": "Genre :",
-    "detail_description": "Description",
+    "gallery_intro": "L'écran c'est froid. La toile, le papier, ça pardonne pas. C'est ça que j'aime. La frontière entre ce que je vois et ce que je ressens.",
+    "gallery_back": "Retour",
+    "photo_collections": "Séries",
+    "photo_intro": "Je cherche l'énergie de la ville. Les visages fatigués, les ruelles, la lumière de 4h du matin. L'histoire qui s'écrit toute seule.",
+    "street_candid": "L'instant volé",
+    "street_intro": "Montréal est belle quand elle est sale. La photo de rue, c'est ma façon de documenter la solitude et la lumière dans le bordel ambiant.",
+    "street_marquee": ">>> DANS LA RUE <<< L'INVISIBLE DEVIENT VISIBLE <<< MONTRÉAL 2026 <<<",
+    "projects_title": "Code & Systèmes",
+    "projects_subtitle": "L'art de l'architecture invisible",
+    "projects_intro": "L'architecture, c'est aussi de l'art. Quand je lâche les pinceaux, je retourne à mes racines : le terminal, le code, et les systèmes qui tiennent debout.",
+    "projects_view_code": "Voir la source",
+    "sidebar_radio_select": "La trame sonore :",
+    "sidebar_video_title": "TV Rétro",
+    "sidebar_video_note": "Clic pour partir/arrêter",
+    "sculpting_title": "Volume",
+    "sculpting_subtitle": "Argile, Pierre, Métal",
+    "sculpting_intro": "Sortir de la 2D. Toucher la matière pour vrai.",
+    "photo_consolidated_title": "Portfolio Photo",
+    "photo_consolidated_subtitle": "L'œil sur la ville",
+    "nav_music": "Son",
+    "music_title": "🎵 Son",
+    "music_subtitle": "Mes compos & ambiances",
+    "music_tracks_heading": "🎧 Pistes",
+    "music_loading": "Chargement...",
+    "music_marquee": ">>> EN ONDES <<< CRÉATION SONORE <<< ÉCOUTE ÇA 2026 <<<",
+    "music_no_tracks": "Rien pour l'instant. Le studio est vide.",
+    "music_load_error": "Erreur de chargement.",
+    "music_audio_unsupported": "Ton browser veut pas jouer de son.",
+    "index_latest_loading": "On regarde ce qui est nouveau...",
+    "index_latest_label": "⭐ TOUT FRAIS ⭐",
+    "index_latest_added": "Date :",
+    "index_latest_empty": "Rien de neuf.",
+    "sidebar_radio_loading": "Chargement...",
+    "sidebar_radio_no_tracks": "Silence radio.",
+    "detail_loading": "Un instant...",
+    "detail_not_found": "Ça existe pas.",
+    "detail_medium": "Technique :",
+    "detail_genre": "Style :",
+    "detail_description": "L'histoire",
     "detail_listen": "Écouter",
-    "detail_back": "Retour à la galerie",
+    "detail_back": "Retour",
     "detail_private": "Privé",
     "detail_public": "Public",
-    "detail_error": "Impossible de charger les détails."
+    "detail_error": "Oups, erreur de chargement."
 }
