--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,8 @@
 {
     "nav_home": "Home",
     "filter_all": "All",
-    "nav_art": "Art",
+    "nav_painting": "Painting",
+    "nav_drawing": "Drawing",
     "nav_photo": "Photo",
     "nav_sculpting": "Volume",
     "nav_projects": "Code",
@@ -22,7 +23,9 @@
     "footer_browser": "Guaranteed heavy-framework free. Best viewed with coffee.",
     "footer_visitors": "Visits:",
     "footer_last_updated": "Last update:",
+    "gallery_created_on": "Created:",
     "gallery_added_on": "Added:",
+    "filter_empty": "Nothing here yet.",
     "index_welcome": "Hi.",
     "index_intro": "I've spent my life building invisible infrastructures. Here, it's the opposite. It's visible, it's imperfect, it's me. Oil, charcoal, and photos taken while the city sleeps.",
     "index_featured": "Right now: \"Morning Dreams\" (Oil on Canvas)",
