--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,7 +1,8 @@
 {
     "nav_home": "Accueil",
     "filter_all": "Tout",
-    "nav_art": "Art",
+    "nav_painting": "Peinture",
+    "nav_drawing": "Dessin",
     "nav_photo": "Photo",
     "nav_sculpting": "Volume",
     "nav_projects": "Code",
@@ -22,7 +23,9 @@
     "footer_browser": "Garanti sans frameworks lourds. Marche mieux avec un café.",
     "footer_visitors": "Passages :",
     "footer_last_updated": "Dernière update :",
+    "gallery_created_on": "Créé le :",
     "gallery_added_on": "Ajouté le :",
+    "filter_empty": "Rien ici pour l'instant.",
     "index_welcome": "Salut.",
     "index_intro": "J'ai passé ma vie à construire des infrastructures invisibles. Ici, c'est l'inverse. C'est visible, c'est imparfait, c'est moi. De l'huile, du fusain, et des photos prises quand la ville dort.",
     "index_featured": "En ce moment : \"Morning Dreams\" (Huile sur toile)",
