--- a/lang/ht.json
+++ b/lang/ht.json
@@ -1,7 +1,8 @@
 {
     "nav_home": "Akèy",
     "filter_all": "Tout",
-    "nav_art": "Kreyasyon",
+    "nav_painting": "Penti",
+    "nav_drawing": "Desen",
     "nav_photo": "Foto",
     "nav_sculpting": "Volim",
     "nav_projects": "Kòd",
@@ -22,7 +23,9 @@
     "footer_browser": "Garanti san gwo framework. Pi bon avèk yon kafe.",
     "footer_visitors": "Vizit:",
     "footer_last_updated": "Dènye modif:",
+    "gallery_created_on": "Kreye:",
     "gallery_added_on": "Ajoute:",
+    "filter_empty": "Anyen isit pou kounya.",
     "index_welcome": "Bonjou.",
     "index_intro": "Mwen pase tout vi m ap bati enfrastrikti envizib. Isit la, se lekontrè. Se vizib, se enpafè, se mwen. Lwil, chabon, ak foto ki pran lè vil la ap dòmi.",
     "index_featured": "Kounye a: \"Morning Dreams\" (Lwil sou twal)",
