--- a/lang/mx.json
+++ b/lang/mx.json
@@ -1,7 +1,8 @@
 {
     "nav_home": "Inicio",
     "filter_all": "Todo",
-    "nav_art": "Arte",
+    "nav_painting": "Pintura",
+    "nav_drawing": "Dibujo",
     "nav_photo": "Foto",
     "nav_sculpting": "Volumen",
     "nav_projects": "Código",
@@ -22,7 +23,9 @@
     "footer_browser": "Garantizado sin frameworks pesados. Mejor con un café.",
     "footer_visitors": "Visitas:",
     "footer_last_updated": "Última act.:",
+    "gallery_created_on": "Creado:",
     "gallery_added_on": "Agregado:",
+    "filter_empty": "Nada aquí todavía.",
     "index_welcome": "Hola.",
     "index_intro": "Pasé mi vida construyendo infraestructuras invisibles. Aquí es lo contrario. Es visible, es imperfecto, soy yo. Óleo, carbón y fotos tomadas cuando la ciudad duerme.",
     "index_featured": "Ahora mismo: \"Morning Dreams\" (Óleo sobre lienzo)",
