--- a/lang/en.json
+++ b/lang/en.json
@@ -19,7 +19,7 @@
     "sidebar_construction": "Still a work in progress (like everything else).",
     "sidebar_radio_title": "Radio Alex",
     "sidebar_radio_playing": "Now Playing:",
-    "footer_copy": "© 2026 Alex. Hand-made in Montreal.",
+    "footer_copy": "© 2026 Alex",
     "footer_browser": "Guaranteed heavy-framework free. Best viewed with coffee.",
     "footer_visitors": "Visits:",
     "footer_last_updated": "Last update:",
