--- a/lang/fr.json
+++ b/lang/fr.json
@@ -19,7 +19,7 @@
     "sidebar_construction": "Toujours en chantier (comme le reste).",
     "sidebar_radio_title": "Radio Alex",
     "sidebar_radio_playing": "En ce moment :",
-    "footer_copy": "© 2026 Alex. Fait à la main à Montréal.",
+    "footer_copy": "© 2026 Alex",
     "footer_browser": "Garanti sans frameworks lourds. Marche mieux avec un café.",
     "footer_visitors": "Passages :",
     "footer_last_updated": "Dernière update :",
