--- a/lang/ht.json
+++ b/lang/ht.json
@@ -19,7 +19,7 @@
     "sidebar_construction": "Toujou an chantye (tankou tout rès la).",
     "sidebar_radio_title": "Radyo Alex",
     "sidebar_radio_playing": "Kounye a:",
-    "footer_copy": "© 2026 Alex. Fèt alamen Monreyal.",
+    "footer_copy": "© 2026 Alex",
     "footer_browser": "Garanti san gwo framework. Pi bon avèk yon kafe.",
     "footer_visitors": "Vizit:",
     "footer_last_updated": "Dènye modif:",
