--- a/lang/mx.json
+++ b/lang/mx.json
@@ -19,7 +19,7 @@
     "sidebar_construction": "Siempre en obra (como todo lo demás).",
     "sidebar_radio_title": "Radio Alex",
     "sidebar_radio_playing": "Ahora suena:",
-    "footer_copy": "© 2026 Alex. Hecho a mano en Montreal.",
+    "footer_copy": "© 2026 Alex",
     "footer_browser": "Garantizado sin frameworks pesados. Mejor con un café.",
     "footer_visitors": "Visitas:",
     "footer_last_updated": "Última act.:",
