--- a/lang/fr.json
+++ b/lang/fr.json
@@ -6,7 +6,7 @@
     "nav_photo": "Photo",
     "nav_sculpting": "Volume",
     "nav_projects": "Code",
-    "header_title": "Le Portfolio d'Alex",
+    "header_title": "alex a montreal",
     "header_subtitle": "Code le jour, Art la nuit. Essayer de faire du sens avec tout ça.",
     "marquee": "*** BIENVENUE DANS MON ESPACE *** PAS DE CLIENTS, PAS DE DEADLINES, JUSTE DE LA CRÉATION *** MIS À JOUR : FÉV 2026 ***",
     "sidebar_about_title": "C'est qui ?",
@@ -19,7 +19,7 @@
     "sidebar_construction": "Toujours en chantier (comme le reste).",
     "sidebar_radio_title": "Radio Alex",
     "sidebar_radio_playing": "En ce moment :",
-    "footer_copy": "© 2026 Alex",
+    "footer_copy": "© 2026 alex a montreal",
     "footer_browser": "Garanti sans frameworks lourds. Marche mieux avec un café.",
     "footer_visitors": "Passages :",
     "footer_last_updated": "Dernière update :",
