--- a/lang/en.json
+++ b/lang/en.json
@@ -6,7 +6,7 @@
     "nav_photo": "Photo",
     "nav_sculpting": "Volume",
     "nav_projects": "Code",
-    "header_title": "Alex's Portfolio",
+    "header_title": "alex a montreal",
     "header_subtitle": "Code by day, Art by night. Trying to make sense of it all.",
     "marquee": "*** WELCOME TO MY SPACE *** NO CLIENTS, NO DEADLINES, JUST CREATION *** UPDATED: FEB 2026 ***",
     "sidebar_about_title": "Who?",
@@ -19,7 +19,7 @@
     "sidebar_construction": "Still a work in progress (like everything else).",
     "sidebar_radio_title": "Radio Alex",
     "sidebar_radio_playing": "Now Playing:",
-    "footer_copy": "© 2026 Alex",
+    "footer_copy": "© 2026 alex a montreal",
     "footer_browser": "Guaranteed heavy-framework free. Best viewed with coffee.",
     "footer_visitors": "Visits:",
     "footer_last_updated": "Last update:",
