--- a/lang/ht.json
+++ b/lang/ht.json
@@ -6,7 +6,7 @@
     "nav_photo": "Foto",
     "nav_sculpting": "Volim",
     "nav_projects": "Kòd",
-    "header_title": "Pòtfolyo Alex",
+    "header_title": "alex a montreal",
     "header_subtitle": "Kòd lajounen, Atizay lannwit. M'ap eseye mete sans nan tou sa.",
     "marquee": "*** BYENVENI NAN ESPAS MWEN *** PA GEN KLIYAN, PA GEN DAT LIMIT, SÈLMAN KREYASYON *** MIZAJOU : FEV 2026 ***",
     "sidebar_about_title": "Kiyès sa?",
@@ -19,7 +19,7 @@
     "sidebar_construction": "Toujou an chantye (tankou tout rès la).",
     "sidebar_radio_title": "Radyo Alex",
     "sidebar_radio_playing": "Kounye a:",
-    "footer_copy": "© 2026 Alex",
+    "footer_copy": "© 2026 alex a montreal",
     "footer_browser": "Garanti san gwo framework. Pi bon avèk yon kafe.",
     "footer_visitors": "Vizit:",
     "footer_last_updated": "Dènye modif:",
