--- a/lang/mx.json
+++ b/lang/mx.json
@@ -6,7 +6,7 @@
     "nav_photo": "Foto",
     "nav_sculpting": "Volumen",
     "nav_projects": "Código",
-    "header_title": "Portafolio de Alex",
+    "header_title": "alex a montreal",
     "header_subtitle": "Código de día, Arte de noche. Tratando de darle sentido a todo.",
     "marquee": "*** BIENVENIDO A MI ESPACIO *** SIN CLIENTES, SIN FECHAS LÍMITE, SOLO CREACIÓN *** ACTUALIZADO: FEB 2026 ***",
     "sidebar_about_title": "¿Quién?",
@@ -19,7 +19,7 @@
     "sidebar_construction": "Siempre en obra (como todo lo demás).",
     "sidebar_radio_title": "Radio Alex",
     "sidebar_radio_playing": "Ahora suena:",
-    "footer_copy": "© 2026 Alex",
+    "footer_copy": "© 2026 alex a montreal",
     "footer_browser": "Garantizado sin frameworks pesados. Mejor con un café.",
     "footer_visitors": "Visitas:",
     "footer_last_updated": "Última act.:",
