--- a/lang/ht.json
+++ b/lang/ht.json
@@ -90,5 +90,9 @@
     "detail_back": "Retounen",
     "detail_private": "Prive",
     "detail_public": "Piblik",
-    "detail_error": "Oups, erè chajman."
+    "detail_error": "Oups, erè chajman.",
+    "detail_lyrics": "Pawòl",
+    "card_github": "GitHub",
+    "card_website": "Sit wèb",
+    "music_play_me": "Jwe"
 }
