everything is done

--- a/lang/en.json
+++ b/lang/en.json
@@ -8,7 +8,7 @@
     "nav_projects": "Code",
     "header_title": "alex a montreal",
     "header_subtitle": "Code by day, Art by night. Trying to make sense of it all.",
-    "marquee": "*** WELCOME TO MY SPACE *** NO CLIENTS, NO DEADLINES, JUST CREATION *** UPDATED: FEB 2026 ***",
+    "marquee": "*** I have suffered often, I have sometimes been mistaken, but I have loved. It is I who have lived, and not a fictitious being created by my pride and my boredom. ***",
     "sidebar_about_title": "Who?",
     "sidebar_about_text": "I'm Alex. DevOps by trade, artist by necessity. Based in Montreal. I look for the balance between system logic and creative chaos.",
     "sidebar_links_title": "Connect",
