--- a/lang/fr.json
+++ b/lang/fr.json
@@ -8,7 +8,7 @@
     "nav_projects": "Code",
     "header_title": "alex a montreal",
     "header_subtitle": "Code le jour, Art la nuit. Essayer de faire du sens avec tout ça.",
-    "marquee": "*** BIENVENUE DANS MON ESPACE *** PAS DE CLIENTS, PAS DE DEADLINES, JUSTE DE LA CRÉATION *** MIS À JOUR : FÉV 2026 ***",
+    "marquee": "*** J'ai souffert souvent, je me suis trompé quelquefois, mais j'ai aimé. C'est moi qui ai vécu, et non pas un être factice créé par mon orgueil et mon ennui. ***",
     "sidebar_about_title": "C'est qui ?",
     "sidebar_about_text": "Moi c'est Alex. DevOps de carrière, artiste par nécessité. J'habite Montréal. Je cherche l'équilibre entre la logique des systèmes et le chaos de la création.",
     "sidebar_links_title": "Mes réseaux",
