--- a/lang/mx.json
+++ b/lang/mx.json
@@ -8,7 +8,7 @@
     "nav_projects": "Código",
     "header_title": "alex a montreal",
     "header_subtitle": "Código de día, Arte de noche. Tratando de darle sentido a todo.",
-    "marquee": "*** BIENVENIDO A MI ESPACIO *** SIN CLIENTES, SIN FECHAS LÍMITE, SOLO CREACIÓN *** ACTUALIZADO: FEB 2026 ***",
+    "marquee": "*** He sufrido a menudo, a veces me he equivocado, pero he amado. Soy yo quien ha vivido, y no un ser ficticio creado por mi orgullo y mi hastío. ***",
     "sidebar_about_title": "¿Quién?",
     "sidebar_about_text": "Soy Alex. DevOps de profesión, artista por necesidad. Vivo en Montreal. Busco el equilibrio entre la lógica de los sistemas y el caos de la creación.",
     "sidebar_links_title": "Conectar",
