--- a/lang/ht.json
+++ b/lang/ht.json
@@ -8,7 +8,7 @@
     "nav_projects": "Kòd",
     "header_title": "alex a montreal",
     "header_subtitle": "Kòd lajounen, Atizay lannwit. M'ap eseye mete sans nan tou sa.",
-    "marquee": "*** BYENVENI NAN ESPAS MWEN *** PA GEN KLIYAN, PA GEN DAT LIMIT, SÈLMAN KREYASYON *** MIZAJOU : FEV 2026 ***",
+    "marquee": "*** Mwen soufri souvan, mwen fè erè pafwa, men mwen renmen. Se mwen menm ki viv, se pa yon fo moun lògèy mwen ak annwi mwen kreye. ***",
     "sidebar_about_title": "Kiyès sa?",
     "sidebar_about_text": "Mwen se Alex. DevOps se metye m, atis se nesesite m. M' rete Monreyal. M'ap chèche balans ant lojik sistèm yo ak dezòd kreyasyon an.",
     "sidebar_links_title": "Konekte",
